--- a/css/omens-stylesheet-v3.css
+++ b/css/omens-stylesheet-v3.css
@@ -11114,6 +11114,292 @@ top: -20px;
 }
 
 /* END POST 14 TEMPLATE */
+/* START POST 15 TEMPLATE */
+
+.omens-post-15 {
+  position: relative;
+  width: 550px;
+   margin: 0 auto;
+ background: #212121;
+ color: #6a6a6a;
+padding-bottom: 10px;
+  padding-left: 20px;
+  border-radius: 5px;
+}
+.omens-post-15 .post-image-1 {
+  position: absolute;
+  width: 200px;
+  height: 400px;
+  right: -310px;
+top: -20px;
+  position: relative;
+  border: 15px solid var(--custom);
+  outline: 10px solid #fff;
+  outline-offset: -25px;
+  margin:10px 15px 5px 0px;
+  background: var(--custom);
+}
+.omens-post-15 .post-image-1 img {
+  filter: grayscale(100%)brightness(120%);
+  mix-blend-mode:soft-light;
+  max-width:100%;
+}
+.omens-post-15 .lyric-1 {
+    font:italic 300 25px/100% 'montserrat';
+  letter-spacing:1px;
+  padding:7px;
+  text-transform:uppercase;
+  text-align:center;
+  position:relative;
+  z-index:1;
+  position: relative;
+  padding-bottom: 5px;
+  border-bottom: 5px solid var(--custom);
+  line-height:35px;
+  color:var(--custom);
+}
+.omens-post-15 .lyric-2 {
+    font:bold 10px/100% roboto;
+  margin-left: -20px;
+  margin-top: 0px;
+  letter-spacing:2px;
+  background:var(--custom);
+  padding:7px;
+  text-transform:uppercase;
+  color:#fff;
+  text-align:center;
+  position:relative;
+top: -30px;
+  z-index:1;
+  justify-self:center;
+}
+.omens-post-15 .post-icon {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  border: 5px solid var(--custom);
+  outline: 1px solid #fff;
+  outline-offset: -12px;
+  background: var(--custom);
+}
+.omens-post-15 .post-icon img {
+  width: 100px;
+  height: 100px; 
+  mix-blend-mode: soft-light;
+}
+.omens-post-15 .post-body {
+     font:400 14px/18px roboto, arial, sans-serif;
+  color:#aaa;
+  text-align:justify;
+  margin-top: 10px;
+  width: 270px;
+  height:435px;
+  overflow:auto;
+position: relative;
+top: -35px;
+  padding-left: 10px;
+  padding-right:20px;
+  margin-top: -440px;
+}
+.omens-post-15 .post-body::-webkit-scrollbar {
+  width:13px;
+}
+
+.omens-post-15 .post-body::-webkit-scrollbar-thumb {
+  border:5px solid #2f2f2f;
+  background:var(--custom);
+}
+
+.omens-post-15 .post-body::-webkit-scrollbar-track {
+  background:#2f2f2f;
+}
+.omens-post-15 .post-body b {
+  color: var(--custom);
+  font: italic 300 15px 'montserrat';
+}
+
+.omens-post-15 .post-body b i,
+.omens-post-15 .post-body u i,
+.omens-post-15 .post-body span i {
+  color: revert;
+  font-weight: revert;
+}
+
+.omens-post-15 .post-body i {
+  font: 500 12px/18px montserrat;
+  font-style: italic;
+  color: #ddd;
+}
+.omens-post-15 .post-body c {
+    color: var(--custom);
+  font: italic 300 15px 'montserrat';
+}
+.omens-post-15 .post-body span {
+  color: var(--custom);
+}
+.omens-post-15 .post-body u {
+  text-decoration: none;
+  background: var(--custom);
+  color: #222;
+  padding: 0px 3px;
+}
+.omens-post-15 .post-body tagged {
+  gap:10px;
+  font: bold 300 15px/100% 'Roboto';
+  text-transform: uppercase;
+  color:#ddd;
+  height: 25px;
+  width: 30;
+   gap:0px 10px;
+}
+.omens-post-15 .post-body tagged a {
+  margin-top: 10px;
+      background-color: var(--custom);
+    border-radius:1px;
+  float: right;
+  padding:5px;
+  color:#fff;;
+}
+.omens-post-15 .post-body a {
+  text-decoration: none;
+  color: white;
+}
+
+/* END POST 15 TEMPLATE */
+/* START POST 16 TEMPLATE */
+
+.omens-post-16 {
+  width: 510px;
+  height: auto;
+  background: #222;
+  margin: 0 auto;
+  padding-top: 30px;
+  padding-right: 30px;
+  padding-left: 30px;
+  border-radius: 3px;
+  padding-bottom: 70px;
+}
+.omens-post-16 .post-border {
+  	width:512px;
+	border:1px solid #ccc;
+	margin:auto;
+	background:#e4e4e4;
+	padding:15px;
+	border-radius:3px;
+}
+.omens-post-16 .lyric-1 {
+position: relative;
+top:5px;
+  padding-top: 20px;
+  padding-left: 20px;
+   font:700 23px/100% 'Roboto';
+  text-transform:uppercase;
+  text-align:right;
+  color:var(--custom);
+}
+.omens-post-16 .lyric-2 {
+position: relative;
+top: -5px;
+  width: 370px;
+  padding-top: 5px;
+  padding-bottom: 20px;
+  font:100 12px 'Montserrat';
+  text-transform:uppercase;
+  text-align:right;
+  color: #999;
+}
+.omens-post-16 .post-image-2 {
+	width:500px;
+	height:150px;
+	background-color:var(--custom);
+	border-radius:2px;
+  padding: 3px;
+	overflow:hidden;
+}
+.omens-post-16 .post-image-2 img {
+  filter: grayscale(50%);
+  mix-blend-mode:soft-light;
+}
+.omens-post-16 .post-image-2-override img {
+  filter: grayscale(50%);
+  mix-blend-mode:lighten;
+}
+.omens-post-16 .post-icon {
+	float:right;
+  width: 100px;
+  height: 100px;
+  padding: -50px;
+  border: solid 5px var(--custom);
+  border-radius: 100%;
+  background:var(--custom);
+	shape-outside: circle(100px);
+	position:relative;
+  margin-left: 25px;
+	margin-top:15px;
+}
+
+.omens-post-16 .post-icon img {
+	display:block;
+	width:100px;
+	height:100px;
+	border-radius:100%;
+  filter: grayscale(50%);
+  mix-blend-mode:hard-light;
+}
+
+.omens-post-16 .post-body {
+  border-left: 10px solid var(--custom);
+	padding:20px;
+	text-align:justify;
+  margin-left: -10px;
+  margin-top: -55px;
+	font:200 13px/15px Montserrat, arial, sans-serif; 
+	color:#fff;
+}
+.omens-post-16 .post-body b {
+  color: var(--custom);
+  font-weight: 800;
+  font-size: 15px;
+}
+
+.omens-post-16 .post-body b i,
+.omens-post-16 .post-body u i,
+.omens-post-16 .post-body span i {
+  color: revert;
+  font-weight: revert;
+}
+
+.omens-post-16 .post-body i {
+  font: 500 12px/18px roboto;
+  font-style: italic;
+  color: #ddd;
+}
+.omens-post-16 .post-body span {
+  color: var(--custom);
+}
+.omens-post-16 .post-body u {
+  text-decoration: none;
+  background: #7c7c7c;
+  color: #fff;
+  padding: 0px 3px;
+}
+.omens-post-16 .post-body tagged {
+  gap:10px;
+  font:300 15px/100% 'Montserrat';
+  color:#ddd;
+  padding: 50px;
+  text-align:center;
+  float: right;
+}
+.omens-post-16 .post-body tagged a {
+  padding:5px;
+  border-radius: 3px;
+  background:var(--custom);
+  color:#eee;
+  text-decoration:none;
+}
+
+/* END POST 16 TEMPLATE */
 /* START WANTED 1 TEMPLATE */
 
 .omens-wanted-1 {
