Transfer tabbed staff template CSS

--- a/css/omens-stylesheet-v3.css
+++ b/css/omens-stylesheet-v3.css
@@ -7740,6 +7740,72 @@ order:-1;
   text-align: center;
   order: -1;
 }
+
+.omens-basic-template.tabbed { text-align:center; }
+.omens-basic-template.tabbed label {
+  display: inline-grid;
+  place-items: center;
+  place-content: center;
+  text-align: center;
+  font: 700 9px roboto;
+  color: #eee;
+  text-transform: uppercase;
+  height: 75px;
+  width: 75px;
+  padding: 5px;
+  border: 2px solid #444;
+  border-radius: 100%;
+  transition: 0.25s;
+  cursor: pointer;
+  position: sticky;
+}
+
+.omens-basic-template.tabbed label {
+  width: 50px;
+  height: 50px;
+  padding: 10px;
+  margin: 25px 10px 0;
+}
+
+.omens-basic-template.tabbed input[type="radio"] {
+  display: none;
+}
+
+.omens-basic-template.tabbed input[type="radio"]:checked + label {
+  border: 2px solid var(--main-accent);
+}
+
+.omens-basic-template.tabbed .omens-tabs-container {
+  width: 33%;
+  display: flex;
+  flex-flow: column nowrap;
+  padding: 25px 0;
+  position: sticky;
+  top: 25px;
+  float: left;
+}
+
+.omens-basic-template.tabbed .omens-tabs-container label:nth-of-type(even) {
+  transform: translateX(75px);
+}
+
+.omens-basic-template.tabbed .omens-basic-content {
+  margin-top: 25px;
+  display: none;
+}
+
+#omens-basic-tab-1:checked ~ #omens-basic-tab-1-content,
+#omens-basic-tab-2:checked ~ #omens-basic-tab-2-content,
+#omens-basic-tab-3:checked ~ #omens-basic-tab-3-content,
+#omens-basic-tab-4:checked ~ #omens-basic-tab-4-content,
+#omens-basic-tab-5:checked ~ #omens-basic-tab-5-content,
+#omens-basic-tab-6:checked ~ #omens-basic-tab-6-content,
+#omens-basic-tab-7:checked ~ #omens-basic-tab-7-content,
+#omens-basic-tab-8:checked ~ #omens-basic-tab-8-content,
+#omens-basic-tab-9:checked ~ #omens-basic-tab-9-content,
+#omens-basic-tab-10:checked ~ #omens-basic-tab-10-content {
+  display: block;
+}
 /* END STAFF TEMPLATE */
 /* START MEMBER DIRECTORY */
 
